always show scrollbar to avoid flashes on repaint

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -18,6 +18,7 @@ body {
     "Noto Sans",
     sans-serif;
   text-rendering: optimizeLegibility;
+  overflow-y: scroll;
 }
 
 *, *:after, *:before {
